# android-vendor-check

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  vendor_check.py
vendorcheck/: analyzer.py  androidbp.py  bpverify.py  classifier.py  classify.py  compatibility.py  dependency.py  elf.py  fixups.py  group.py  hashcheck.py  health.py  ignoredlibs.py  index.py  jsonreport.py  models.py  parser.py  patch.py  report.py  resolver.py  resolverdb.py  romindex.py  stats.py  suggestions.py  systemlibs.py  utils.py
