[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vendorcheck"
version = "1.0.0"
description = "Static analysis toolkit for Android proprietary vendor blobs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "Sourabh" }
]

keywords = [
    "android",
    "aosp",
    "vendor",
    "lineageos",
    "rom",
    "elf",
    "androidbp",
    "static-analysis"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities"
]

dependencies = [
    "pyelftools>=0.31"
]

[project.urls]
Homepage = "https://github.com/Blacklucifer82/android-vendor-check"
Repository = "https://github.com/Blacklucifer82/android-vendor-check"
Issues = "https://github.com/Blacklucifer82/android-vendor-check/issues"

[project.scripts]
vendorcheck = "vendor_check:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["vendorcheck*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
